terraform/projectAWS/modules/vpc/create_vpc.tf
resource "aws_vpc" "myvpc" {
	cidr_block = "10.0.0.0/16"
	instance_tenancy = "default"
	
	tags = {
		Name = "vpc"
	}

}
