terraform/projectAWS/modules/vpc/private_subnet.tf
resource "aws_subnet" "private_subnet" {
	vpc_id = aws_vpc.myvpc.id

	cidr_block = "10.0.2.0/24"
	map_public_ip_on_launch = false
	
	tags = {
		Name = "Private-Subnet"
	}

	
}
